<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.activities.Register">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:background="@drawable/background_gradient"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/background" />
        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorWhite"
            android:contentDescription="@string/background" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="120dp"
        android:id="@+id/layoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/usernameEt"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_person"
            android:hint="@string/username_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_person"
            android:autofillHints="Yoosin Paddy"
            tools:targetApi="o"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:inputType="textPersonName" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/emailEt"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_person"
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_person"
            android:autofillHints=""
            tools:targetApi="o"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:inputType="textEmailAddress" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/passwordEt"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_person"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_person"
            android:autofillHints=""
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:inputType="textPassword"
            tools:targetApi="o" />
        <Button
            android:textColor="#FFF"
            android:background="@drawable/rec_gradient"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/sign_up"
            android:onClick="register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="10dp"
            android:textColor="#FFF"
            android:background="@drawable/rec_gradient_fb"
            android:textAllCaps="false"
            android:onClick="login"
            android:text="@string/already_have_an_account_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageVIew"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        android:background="@drawable/background_white"
        android:padding="5dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/app_icon" />

    <TextView
        android:textSize="20sp"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageVIew"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>